# auto-wlr-randr

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  deploy-to-crate.yml
files/: auto-wlr-randr.service  auto-wlr-randr.spec  config.toml
man/: auto-wlr-randr.1.md  auto-wlr-randr.5.md  auto-wlr-randrctl.1.md
src/: config.rs  event_loop.rs  ipc.rs  lib.rs  output.rs  wayland.rs
tests/: Containerfile  config_tests.rs  event_loop_tests.rs  ipc_tests.rs
