[package]
name = "auto-wlr-randr"
version = "1.0.1"
edition = "2024"
authors = ["Jiri Kyjovsky j1.kyjovsky@gmail.com"]
description = "Automatic display configuration for Wayland compositors"
license = "GPL-3.0-or-later"
homepage = "https://github.com/nikromen/auto-wlr-randr"
repository = "https://github.com/nikromen/auto-wlr-randr"
documentation = "https://github.com/nikromen/auto-wlr-randr/blob/main/README.md"
readme = "README.md"
keywords = ["wayland", "wlr-randr"]
categories = ["command-line-utilities", "os::linux-apis"]


[dependencies]
wayland-client = "0.31"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0.117"
libc = "0.2.175"
mio = { version = "0.8", features = ["net", "os-ext", "os-poll"] }

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.8.1"
assert_fs = "1.1.1"
rstest = "0.18.2"
test-log = "0.2.14"

[profile.rpm]
inherits = "release"
lto = true
codegen-units = 1
debug = true


[[bin]]
name = "auto-wlr-randr"
path = "src/bin/daemon.rs"

[[bin]]
name = "auto-wlr-randrctl"
path = "src/bin/ctl.rs"
